--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,12 @@ html, body {
 
 .etiquette-outreMer{
 	font-family: 'Marianne', sans-serif;
-    font-size: 16px;
+	font-size: 7px;
     font-weight: bold;
     color: #e62d3c;
 	text-transform: uppercase; /* Convertit le texte en majuscules */
 }
+
 /* -------------------------------------------------------------------------- */
 /*                                    SIDEBAR                                 */
 /* -------------------------------------------------------------------------- */
@@ -58,9 +59,7 @@ html, body {
 	margin-bottom: 30px;
 }
 
-
-
-
+/* Barre de recherche */
 #search-container {
 	position: absolute;
 	top: 10px; /* Ajustez la distance depuis le haut selon vos besoins */
